# eve_workspace_14.04

barrett_control/barrett_controller_switcher/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml  package.xml~
barrett_control/barrett_controller_switcher/src/: main.cpp  main_window.cpp  main_window.cpp.autosave  qnode.cpp
barrett_control/barrett_controller_switcher/ui/: main_window.ui
barrett_control/barrett_hw/: CMakeLists.txt  CMakeLists.txt~  arm_cartesian_state_plugin.xml  arm_cartesian_state_plugin.xml~  package.xml  package.xml~  robot_state_plugin.xml~  robot_states_plugin.xml
barrett_control/barrett_hw/config/: barrett_controllers (copy).yaml~  barrett_controllers_copy.yaml  controllers.yaml  controllers.yaml~  controllers_copy.yaml  wam_dmp_joint_position_controller.yaml  wam_joint_position_gains.yaml  wam_joint_space_variable_names.yaml
barrett_control/barrett_hw/launch/: example.launch  left_params.launch  test_model.launch  test_model.launch~  test_wam.launch  test_wam.launch~  test_wam_ll.launch  test_wam_sim.launch  test_wam_sim.launch~  wam.launch  wam.launch~
barrett_control/barrett_hw/msg/: arm_cartesian_state.msg  arm_cartesian_state.msg~  joint_state.msg  robot_cartesian_state.msg  robot_cartesian_state.msg~  robot_states_no_tactile.msg  robot_states_tactile.msg  wam_realtime_status.msg
barrett_control/barrett_hw/src/: arm_cartesian_state_controller.cpp  barrett_hw.cpp  base_robot_hw.cpp  base_robot_hw.cpp~  base_robot_hw_gazebo_plugin.cpp  biotac_state_controller.cpp  check_kdl_parser.cpp  check_kdl_parser.cpp~  robot_states_publisher.cpp  wam_server.cpp  wam_server.cpp~  wam_server_copy _test.cpp  wam_server_copy.cpp  wam_server_ll.cpp
barrett_control/terse_roscpp/: CMakeLists.txt  mainpage.dox  package.xml
barrett_control/terse_roscpp/src/: load_urdf_from_collada.cpp  params.cpp
dmp/task_recorder/: CMakeLists.txt  CMakeLists.txt~  custom_osconsole.config  package.xml  package.xml~
dmp/task_recorder/config/: joint_states_recorder.yaml  joint_states_recorder.yaml~  task_recorder_db.yaml  task_recorder_db.yaml~  task_recorder_manager.yaml  task_recorder_manager.yaml~
dmp/task_recorder/include/: accumulator.h  task_recorder_client.h  task_recorder_utilities.h
dmp/task_recorder/launch/: test_task_recorder_node.launch  test_task_recorder_node.launch~
dmp/task_recorder/msg/: AccumulatedTrialStatistics.msg  DataSample.msg  DataSample.msg~  DataSampleLabel.msg  Description.msg  Notification.msg  TaskRecorderSpecification.msg
dmp/task_recorder/scripts/: datasample_bag_file_parser.py
dmp/task_recorder/srv/: Accumulate.srv~  AddDataSamples.srv  DetectedEvents.srv  GetDataSample.srv  GetInfo.srv  InterruptRecording.srv  ReadDataSamples.srv  SetLabel.srv  SetLastTrialIds.srv  SetupDetector.srv  StartRecording.srv  StartRecording.srv~  StartStreaming.srv  StopRecording.srv  StopRecording.srv~
dmp/task_recorder/test/: test_task_recorder_manager.cpp  test_task_recorder_node.cpp  test_task_recorder_node.cpp~
ops_wbc/ops_wbc/: CMakeLists.txt  package.xml  package.xml~
ops_wbc/ops_wbc_digital_filter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ops_wbc/ops_wbc_digital_filter/src/: pseudo_differentiator.cpp
ops_wbc/ops_wbc_digital_filter/test/: test.cpp
ops_wbc/ops_wbc_robot/: CMakeLists.txt  CMakeLists.txt~  package.xml
ops_wbc/ops_wbc_utils/: CMakeLists.txt  CMakeLists.txt~  package.xml
ops_wbc/ops_wbc_utils/src/: io_utils.cpp  str_utils.cpp
wam/wam_common/wam_common/: CMakeLists.txt  package.xml
wam/wam_common/wam_teleop/: CMakeLists.txt  package.xml
wam/wam_dmp_controller/: CMakeLists.txt  CMakeLists.txt~  controller_plugin.xml  controller_plugin.xml~  package.xml  package.xml~
wam/wam_dmp_controller/config/: wam_cartesian_space_variable_names.yaml~  wam_dmp_ik_controller.yaml  wam_dmp_ik_controller.yaml~  wam_dmp_joint_position_controller.yaml  wam_dmp_joint_position_controller.yaml~  wam_joint_position_gains.yaml  wam_joint_position_gains.yaml~  wam_joint_space_variable_names.yaml  wam_left_arm_variable_names.yaml~
wam/wam_dmp_controller/launch/: dmp_controller_loader.launch  dmp_controller_loader.launch~  dmp_ik_controller_loader.launch  dmp_ik_controller_loader.launch~  dmp_joint_position_controller_loader.launch  dmp_joint_position_controller_loader.launch~  wam_dmp_ik_controller.launch  wam_dmp_ik_controller.launch~  wam_dmp_joint_position_controller.launch  wam_dmp_joint_position_controller.launch~
wam/wam_dmp_controller/msg/: ArmState.msg  ArmState.msg~  GoHomeMsg.msg  ImpedanceControllerGainsMsg.msg  JointControllerState.msg  JointPosSplineMsg.msg  PoseRPY.msg  PoseRPYCmd.msg  PoseRPYCommand.msg~  SetJointGainsMsg.msg  SetJointPosMsg.msg  SetJointPosStampedMsg.msg~
wam/wam_dmp_controller/src/: KinematicChainControllerBase.cpp~  SISE_kalman_filter.cpp  arm_state_controller.cpp  cartesian_twist_controller_ik_with_nullspace_optimization.cpp  cartesian_twist_controller_ik_with_nullspace_optimization.cpp~  dmp_ik_controller.cpp  dmp_ik_controller.cpp~  dmp_joint_position_controller.cpp  dmp_joint_position_controller.cpp~  effective_mass_matrix3d.cpp~  gravity_compensation.cpp  joint_impedance_controller.cpp  joint_impedance_controller.cpp~  joint_position_controller.cpp  joint_position_controller.cpp~  joint_space_controller.cpp  joint_space_spline_controller.cpp  joint_space_spline_controller.cpp~  kalman_filter.cpp  operational_space_controller.cpp  operational_space_impedance_controller.cpp  operational_space_impedance_spline_controller.cpp  pid_controller.cpp  pid_spline_controller.cpp  variable_name_map.cpp
wam/wam_dmp_controller/srv/: GetJointGains.srv  GetJointPos.srv~  GoHome.srv  GoHomeSpline.srv  GoHomeSpline.srv~  ImpedanceControllerGains.srv  ImpedanceControllerGains.srv~  JointPosSpline.srv  PoseRPYCommand.srv  PoseRPYCommand.srv~  SetJointGains.srv  SetJointGains.srv~  SetJointGains~  SetJointPos.srv  SetJointPos.srv~
wam/wam_dmp_controller/test/: test_dmp_controller.cpp  test_dmp_controller.cpp~
wam/wam_robot/wam_node/: CMakeLists.txt  CMakeLists.txt~  package.xml  (+1 more)
(+469 files in other folders)
