<package>
  <name>task_recorder</name>
  <version>0.0.0</version>
  <description>the task recorder package</description>
  <author>Peter Pastor, Mrinal Kalakrishnan</author>
  <license>BSD</license>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <url>http://ros.org/wiki/dynamic_movement_primitive_utilities</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>usc_utilities</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_movement_primitive</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>barrett_hw</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>usc_utilities</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>dynamic_movement_primitive</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>barrett_hw</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltask_recorder"/>
  </export>

</package>
