<package>
  <name>ops_wbc_digital_filter</name>
  <version>1.0.0</version>
  <description>The ops_wbc_digital_filter package</description>
  <maintainer email="robot@mail.com">robot</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_digital_filter</url> -->
  <author email="robot@mail.com">robot</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
</package>
