<package>
  <name>wam_common</name>
  <version>1.0.0</version>
  <description>Stack describing common messages / service / launch files for the Barrett Technology WAM and BarrettHand</description>
  <maintainer email="hm@barrett.com">robot</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/wam_common</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Barrett Techonlogy Inc.</author>
  <author>Kyle Maroney</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>wam_teleop</run_depend>
  <run_depend>wam_srvs</run_depend>
  <run_depend>wam_msgs</run_depend>

</package>
