<package>
  <name>wam_teleop</name>
  <version>1.0.0</version>
  <description>This package contains a joystick and keyboard teleoperation for the Barrett WAM and BarrettHand.</description>
  <maintainer email="hm@barrett.com">robot</maintainer>

  <license>BSD</license>

  <url type="website">http://barrett.com/robot/index.htm</url>
  
  <author>Kyle Maroney</author>
  <author>Hariharasudan Malaichamee</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>wam_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>wam_msgs</run_depend>

</package>
