<package>
  <name>wam_robot</name>
  <version>1.0.0</version>
  <description>wam_robot</description>
  <maintainer email="hm@barrett.com">robot</maintainer>

  <license>GPL</license>

  <url type="website">http://barrett.com/robot/index.htm</url>
  
  <author>Kyle Maroney</author>
  <author>Hariharasudan Malaichamee</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>wam_node</run_depend>


</package>
